# photo_dedup_ai

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  dup.toml  pyproject.toml  requirements-dev.txt
.pdai/: index.sqlite3
src/: cli.py  config.py  db.py  errors.py  hash_exact.py  image_match.py  image_phash.py  logs.py  media.py  walker.py
tests/: test_cli.py  test_db.py  test_dupes.py  test_hash_exact.py  test_image_match.py  test_image_phash.py  test_incremental.py  test_media.py  test_sanity.py  test_walker.py
