[project]
name = "photo-dedup-ai"
version = "0.0.2"
description = "Find and review duplicate / near-duplicate photos and videos with a simple UI."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Alberto Primerano" }]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.8.0",
]

[project.scripts]
pdai = "cli:app"

[tool.setuptools]
# We’re using a flat `src/` layout (modules, not a package)
# So we must list the modules explicitly for packaging
py-modules = ["cli", "logs", "config", "errors", "db", "walker", "media"]
package-dir = {"" = "src"}

[tool.mypy]
files = ["src", "tests"]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["pytest"]
ignore_missing_imports = true


[[tool.mypy.overrides]]
module = ["typer", "typer.*", "rich", "rich.*", "pydantic", "pydantic.*"]
ignore_missing_imports = true
