[project]
name = "photo-dedup-ai"
version = "0.0.2"
description = "Find and review duplicate / near-duplicate photos and videos with a simple UI."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Alberto Primerano" }]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.8.0",
  "blake3>=0.4.1",
  "Pillow>=10.3.0",
  "pillow-heif>=0.16.0",
  "opencv-python-headless>=4.10.0",
  "numpy>=1.26.0",
  "scikit-image>=0.22.0",
]

[project.scripts]
pdai = "cli:app"

[tool.setuptools]
# We’re using a flat `src/` layout (modules, not a package)
# So we must list the modules explicitly for packaging
py-modules = [
  "cli","logs","config","errors","db","walker",
  "media","hash_exact","image_phash","image_match"
]
package-dir = {"" = "src"}

[tool.mypy]
files = ["src", "tests"]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
  "pytest",
  "typer", "typer.*",
  "rich", "rich.*",
  "pydantic", "pydantic.*",
  "blake3", "blake3.*",
  "PIL", "PIL.*",
  "pillow_heif", "pillow_heif.*",
  "skimage", "skimage.*",
  "cv2", "cv2.*",
  "numpy", "numpy.*"
]
ignore_missing_imports = true
